--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ input {
   cursor: pointer;
 }
 
+/* 
 span {
   display: flex;
   flex-direction: column;
@@ -79,7 +80,7 @@ span {
   font-size: 35px;
   font-weight: 700;
   cursor: pointer;
-}
+} */
 
 .height-100px {
   height: 100px;
@@ -155,9 +156,11 @@ span {
 .br_50 {
   border-radius: 50%;
 }
+
 body {
   margin: 0;
 }
+
 /*========================== SIDEBAR CSS ==========================*/
 .btn_sidebar {
   background: linear-gradient(97.42deg, #128dff -4.95%, #1444ef 109.04%);
@@ -227,6 +230,7 @@ input:focus {
   transition: all 0.5s ease;
   pointer-events: all;
 }
+
 .delete_btn {
   cursor: pointer;
 }
