--- a/style.css
+++ b/style.css
@@ -234,3 +234,58 @@ input:focus {
 .delete_btn {
   cursor: pointer;
 }
+
+.custom_answer {
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.border_gray {
+  border: 1px solid gray;
+}
+
+.blue_btn {
+  background: linear-gradient(97.42deg, #128DFF -4.95%, #1444EF 109.04%);
+  border-radius: 4px;
+  color: white;
+  border: 1px solid transparent;
+  padding: 10px 30px;
+  min-width: 150px;
+}
+
+.blue_btn:hover {
+  background: green;
+}
+
+.border_btn {
+  background: transparent;
+  border-radius: 4px;
+  color: #1444EF;
+  border: 1px solid transparent;
+  padding: 8px 30px;
+  min-width: 150px;
+}
+
+.border_btn:hover {
+  border: 1px solid green;
+  padding: 10px 30px;
+  color: green;
+}
+
+.gradient_border {
+  border: 3px solid;
+  border-image-source: url('./border_img.png');
+  border-image-repeat: round;
+  border-image-slice: 3;
+}
+
+@media (max-width:767.98px) {
+  .blue_btn {
+    min-width: 100%;
+  }
+
+  .border_btn {
+    min-width: 100%;
+  }
+}
